objects/Medallia_Integration_Log__c.object
<CustomObject>
    <description>Custom object to track response from Medallia API when a call is made. Used primarily for troubleshooting purposes.</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Medallia Integration Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>Status_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Medallia Integration Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medallia Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>